# HabibiCoin

./: Cargo.toml
src/: index.html  main.rs
static/: style.css
