[package]
name = "pj_v"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }